Loader on send button when sending comment

--- a/www/lib/ionic/scss/custom/swaps/comments/_view.scss
+++ b/www/lib/ionic/scss/custom/swaps/comments/_view.scss
@@ -53,6 +53,11 @@
 
   .send-button {
     padding-top: 10px;
+
+    .dots-spinner svg {
+      width: 20px !important;
+      height: 20px !important;
+    }
   }
 }
 
