--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -303,6 +303,9 @@ a {
     line-height: 1.3; }
   .message-row .send-button {
     padding-top: 10px; }
+    .message-row .send-button .dots-spinner svg {
+      width: 20px !important;
+      height: 20px !important; }
 
 .comment-bottom-buffer {
   height: 98px; }
