Can navigate to comments page from offered swap detail

--- a/www/templates/swaps/comments/view.html
+++ b/www/templates/swaps/comments/view.html
@@ -1,7 +1,7 @@
 <ion-view cache-view="false">
   <ion-nav-title>Comments</ion-nav-title>
   <ion-nav-buttons side="left">
-    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index" ng-click="clearHistory()">Back</a>
+    <a class="button button-icon icon ion-ios-arrow-back" ng-click="goBack()">Back</a>
   </ion-nav-buttons>
   <div class="comments-top-holder">
     <div class="row">
