Add link to comments on own detail

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -286,6 +286,10 @@ a {
     white-space: normal !important;
     margin-bottom: 5px !important; }
 
+.no-comments-yet {
+  margin-top: 55px;
+  padding: 15px; }
+
 .message-row {
   padding: 0px !important;
   position: fixed;
