--- a/www/lib/ionic/scss/custom/swaps/comments/_view.scss
+++ b/www/lib/ionic/scss/custom/swaps/comments/_view.scss
@@ -30,6 +30,11 @@
   }
 }
 
+.no-comments-yet {
+  margin-top: 55px;
+  padding: 15px;
+}
+
 .message-row {
   padding: 0px !important;
   position: fixed;
