--- a/www/templates/swaps/comments/view.html
+++ b/www/templates/swaps/comments/view.html
@@ -35,10 +35,15 @@
   </div>
 
   <ion-content class="comment-page">
-    <div class="list comment-list">
+    <div class="list comment-list" ng-if="comments.length > 0">
       <div class="item" ng-repeat="comment in comments">
         <h2>{{comment.message}}</h2>
         <p>{{comment.user.first_name}} {{comment.user.last_name}} - <span am-time-ago="comment.created_at | amParse:'YYYY-MM-DDTHH:mm:ss.sssZ'"></span><span ng-if="userId == comment.user.id"> - <a ng-click="deleteComment(comment.id)">delete</a></span></p>
+      </div>
+    </div>
+    <div ng-if="comments.length == 0">
+      <div class="no-comments-yet">
+        No comments yet - write the first!
       </div>
     </div>
   </ion-content>
