--- a/www/templates/general/groups/detail.html
+++ b/www/templates/general/groups/detail.html
@@ -16,9 +16,9 @@
       <div>
         {{message}}
       </div>
-      <button class="button button-balanced" ng-click="joinGroup()" ng-show="!groupHasUser" ng-class="buttonClicked ? 'clicked' : ''">
+      <button class="button button-positive" ng-click="joinGroup()" ng-show="!groupHasUser" ng-class="buttonClicked ? 'clicked' : ''">
         <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
-        Join group
+        Join Group
       </button>
       <div>
       </div>
