Fix button styles for Android

--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -229,9 +229,9 @@
                 <div class="clearfix"></div>
                 <br> -->
                 <div>
-                  <a class="button button-positive" href="#/tab/swaps/up-for-grabs/all/list">
+                  <button class="button button-small button-positive" href="#/tab/swaps/up-for-grabs/all/list">
                     View All as List
-                  </a>
+                  </button>
                 </div>
               </div>
             </div>
