--- a/www/templates/swaps/offered-swap-detail.html
+++ b/www/templates/swaps/offered-swap-detail.html
@@ -142,9 +142,9 @@
 
       <div class="bottom-note" ng-show="!loader">
         <div>
-          <a class="button button-energized" href="#/tab/swaps/up-for-grabs/offer/{{shift.id}}/{{shift.start_date}}/edit/{{swap.id}}">
+          <button class="button button-energized" href="#/tab/swaps/up-for-grabs/offer/{{shift.id}}/{{shift.start_date}}/edit/{{swap.id}}">
             Edit Shifts Offered
-          </a>
+          </button>
         </div>
       </div>
 
