--- a/www/templates/swaps/edit-offer.html
+++ b/www/templates/swaps/edit-offer.html
@@ -69,9 +69,9 @@
 
     <div class="bottom-note" ng-show="!loader">
       <div>
-        <a class="button button-positive" ng-click="updateSwap()">
+        <button class="button button-positive" ng-click="updateSwap()">
           Update Offers
-        </a>
+        </button>
       </div>
       <br>
       <p>
