--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -15,6 +15,8 @@
   "custom/general/shift_patterns/shift_patterns",
   "custom/general/shift_patterns/shift_patterns_detail",
 
+  "custom/notifications/index",
+
   "custom/swaps/comments/view",
   "custom/swaps/shared",
   "custom/swaps/own_detail",
