Notification for a swap being accepted

--- a/www/templates/notifications/index.html
+++ b/www/templates/notifications/index.html
@@ -5,6 +5,7 @@
         <comment ng-model="notification" ng-if="notification.category == 'Comment'"></comment>
         <join-group ng-model="notification" ng-if="notification.category == 'JoinGroup'"></join-group>
         <swap-offered ng-model="notification" ng-if="notification.category == 'SwapOffered'"></swap-offered>
+        <swap-accepted ng-model="notification" ng-if="notification.category == 'SwapAccepted'"></swap-accepted>
       </div>
     </div>
   </ion-content>
