Make cannot swipe back on comment page in ios

--- a/www/templates/swaps/comments/view.html
+++ b/www/templates/swaps/comments/view.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false">
+<ion-view cache-view="false" can-swipe-back="false">
   <ion-nav-title>Comments</ion-nav-title>
   <ion-nav-buttons side="left">
     <a class="button button-icon icon ion-ios-arrow-back" ng-click="goBack()">Back</a>
