--- a/www/lib/ionic/scss/custom/swaps/comments/_view.scss
+++ b/www/lib/ionic/scss/custom/swaps/comments/_view.scss
@@ -18,6 +18,9 @@
   .icon-holder {
     text-align: center;
     font-size: 24px;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
   }
 }
 
