--- a/www/templates/swaps/comments/view.html
+++ b/www/templates/swaps/comments/view.html
@@ -28,8 +28,7 @@
         </p>
       </div>
       <div class="col-10 icon-holder">
-        <i class="icon ion-android-arrow-dropup-circle" ng-click="showAdditionalDetails = false" ng-show="showAdditionalDetails"></i>
-        <i class="icon ion-android-arrow-dropdown-circle" ng-click="showAdditionalDetails = true" ng-show="!showAdditionalDetails"></i>
+        <i class="icon ion-android-arrow-dropdown-circle" ng-click="showAdditionalDetailsIconClicked()"></i>
       </div>
     </div>
     <div class="additional-details" ng-show="showAdditionalDetails">
