--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -271,6 +271,11 @@ a {
 .notifications-list h2 {
   white-space: normal !important; }
 
+.comments-page-footer .has-tabs {
+  padding: 0px !important; }
+  .comments-page-footer .has-tabs.bar-footer.has-tabs {
+    bottom: 0px !important; }
+
 .comments-top-holder {
   position: fixed;
   width: 100%;
@@ -306,20 +311,26 @@ a {
 .message-row {
   padding: 0px !important;
   position: fixed;
-  bottom: 0px;
-  margin-bottom: 49px;
-  background-color: #BEEB9F; }
+  bottom: 0px; }
   .message-row .comment-message-textarea {
     width: 100%;
     border: 1px solid lightgrey;
     padding: 10px;
     font-size: 16px;
-    line-height: 1.3; }
+    line-height: 1.3;
+    border-radius: 0px !important; }
   .message-row .send-button {
-    padding-top: 10px; }
+    padding-top: 10px;
+    border-radius: 0px !important; }
     .message-row .send-button .dots-spinner svg {
       width: 20px !important;
       height: 20px !important; }
+
+.platform-android .android-message-row-buffer {
+  height: 49px; }
+
+.platform-ios .ios-message-row-buffer {
+  height: 49px; }
 
 .item-avatar .date-as-square {
   position: absolute;
