--- a/www/lib/ionic/scss/custom/swaps/comments/_view.scss
+++ b/www/lib/ionic/scss/custom/swaps/comments/_view.scss
@@ -1,3 +1,11 @@
+.comments-page-footer .has-tabs {
+  padding: 0px !important;
+
+  &.bar-footer.has-tabs {
+    bottom: 0px !important;
+  }
+}
+
 .comments-top-holder {
   position: fixed;
   width: 100%;
@@ -46,8 +54,6 @@
   padding: 0px !important;
   position: fixed;
   bottom: 0px;
-  margin-bottom: 49px;
-  background-color: $energized;
 
   .comment-message-textarea {
     width: 100%;
@@ -55,14 +61,24 @@
     padding: 10px;
     font-size: 16px;
     line-height: 1.3;
+    border-radius: 0px !important;
   }
 
   .send-button {
     padding-top: 10px;
+    border-radius: 0px !important;
 
     .dots-spinner svg {
       width: 20px !important;
       height: 20px !important;
     }
   }
+}
+
+.platform-android .android-message-row-buffer {
+  height: 49px;
+}
+
+.platform-ios .ios-message-row-buffer {
+  height: 49px;
 }
