--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -10,7 +10,7 @@
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
-    <div class="swap-own-detail-holder">
+    <div class="swap-own-detail-holder" ng-show="!loader">
       <p>
         <b class="date-title">
           <i class="icon ion-star"></i>
