Don't show View All button on swaps index until calendarObjects loaded

--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -221,7 +221,7 @@
           <div class="shift-input-buttons-holder">
             <div class="bottom-block">
               <div>
-                <button class="button button-small button-positive" ng-click="goToViewAllAsList()" ng-show="!upForGrabsLoader">
+                <button class="button button-small button-positive" ng-click="goToViewAllAsList()" ng-show="calendarObjects && !upForGrabsLoader">
                   View All as List
                 </button>
               </div>
