--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -18,7 +18,7 @@
         {{shift_up_for_swap.shift_type.name}} ({{shift_up_for_swap.shift_type.start_hour | numberFixedLen: 2}}:{{shift_up_for_swap.shift_type.start_minute | numberFixedLen: 2}} - {{prettyEndTime(shift_up_for_swap.shift_type)}})
       </div>
       <div class="sub-instructions">
-        Select the shifts you would like to offer as a swap. 
+        Select the shifts you would like to offer as a swap to {{shift_owner.first_name}} {{shift_owner.last_name}}. 
       </div>
     </div>
 
