Change wording on no own swaps or swaps offered

--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -53,7 +53,7 @@
               <div class="card">
                 <div class="item item-text-wrap">
                   <p>
-                    You haven't listed any shifts you want to swap yet.
+                    You don't have any of your own shifts put up for swap right now.
                   </p>
                   <br>
                   <p>
@@ -61,7 +61,7 @@
                   </p>
                   <br>
                   <p>
-                    1. Go to the <a href="#/tab/calendar/index">Calendar tab</a>
+                    1. Go to the <a href="#/tab/calendar/index">Calendar</a> tab
                   </p>
                   <p>
                     2. Select a shift
@@ -71,7 +71,7 @@
                   </p>
                   <br>
                   <p>
-                    Shifts you want to swap will then show up here.
+                    Open shifts and shifts pending swap approval will then show up here.
                   </p>
                 </div>
               </div>
@@ -130,7 +130,7 @@
             <div class="card">
               <div class="item item-text-wrap">
                 <p>
-                  You haven't offered to swap someone else's shift yet.
+                  You don't have any pending offers to swap someone else's shift right now.
                 </p>
                 <br>
                 <p>
