--- a/www/templates/notifications/index.html
+++ b/www/templates/notifications/index.html
@@ -13,6 +13,7 @@
           <swap-approved ng-model="notification" ng-if="notification.category == 'SwapApproved'"></swap-approved>
           <shift-available ng-model="notification" ng-if="notification.category == 'ShiftAvailable'"></shift-available>
           <swap-cancelled ng-model="notification" ng-if="notification.category == 'SwapCancelled'"></swap-cancelled>
+          <someone-elses-swap-accepted ng-model="notification" ng-if="notification.category == 'SomeoneElsesSwapAccepted'"></someone-elses-swap-accepted>
         </div>
       </div>
       <div ng-if="notifications.length == 0">
