--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -10,6 +10,7 @@
 
   "custom/directives/notification",
 
+  "custom/general/account/new",
   "custom/general/groups/detail",
   "custom/general/groups/new",
   "custom/general/shift_patterns/shift_patterns",
