--- a/www/templates/general/account/new.html
+++ b/www/templates/general/account/new.html
@@ -3,24 +3,45 @@
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/general/index">General</a>
   </ion-nav-buttons>
   <ion-content>
-    <div class="list">
-      <label class="item item-input" >
-      <input type="email" placeholder="Email" ng-model="email">
-    </label>
-    <label class="item item-input">
-      <input type="text" placeholder="First Name" ng-model="firstName">
-    </label>
-    <label class="item item-input">
-      <input type="text" placeholder="Last Name" ng-model="lastName">
-    </label>
-
-    <label class="item item-input">
-      <input type="password"  placeholder="Password" ng-model="password">
-    </label>
-    <button class="button button-block button-positive" ng-click="createUser(email, firstName, lastName, password)">
-      Submit
-    </button>
-  </div>
+    <div class="list account-sign-up-list">
+      <div class="item item-divider">
+        Please fill in
+      </div>
+      <label class="item item-input">
+        <input type="text" ng-model="firstName" placeholder="First name">
+      </label>
+      <label class="item item-input">
+        <input type="text" ng-model="lastName" placeholder="Last name">
+      </label>
+      <label class="item item-input">
+        <input type="email" ng-model="email" placeholder="Email">
+      </label>
+      <label class="item item-input">
+        <input type="password" ng-model="password" placeholder="Password">
+      </label>
+      <div class="item item-divider">
+        Please select
+      </div>
+      <label class="item item-radio">
+        <input type="radio" name="sex" ng-model="sex" value="female">
+        <div class="item-content">
+          Female
+        </div>
+        <i class="radio-icon ion-checkmark"></i>
+      </label>
+      <label class="item item-radio">
+        <input type="radio" name="sex" ng-model="sex" value="male">
+        <div class="item-content">
+          Male
+        </div>
+        <i class="radio-icon ion-checkmark"></i>
+      </label>
+    </div>
+    <div class="bottom-note">
+      <button class="button button-block button-positive" ng-click="createUser(email, firstName, lastName, password, sex)">
+        Create Account
+      </button>
+    </div>
 
   </ion-content>
 </ion-view>
