Update shift pattern action buttons

--- a/www/templates/general/shift_patterns/new.html
+++ b/www/templates/general/shift_patterns/new.html
@@ -88,7 +88,7 @@
       </div>
       <div class="action-buttons-holder">
         <div>
-          <button class="button button-balanced" ng-click="createShiftPattern(shiftPatternName, abbreviation)" ng-disabled="buttonClicked">
+          <button class="button button-positive" ng-click="createShiftPattern(shiftPatternName, abbreviation)" ng-disabled="buttonClicked">
             {{actionButtonText}}
           </button>
           <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
