--- a/www/templates/general/shift_patterns/detail.html
+++ b/www/templates/general/shift_patterns/detail.html
@@ -85,7 +85,7 @@
 
       <div class="action-buttons-holder">
         <div>
-          <button class="button button-balanced" ng-click="saveShiftPattern(shiftPatternName, abbreviation)" ng-disabled="buttonClicked">
+          <button class="button button-positive" ng-click="saveShiftPattern(shiftPatternName, abbreviation)" ng-disabled="buttonClicked">
             {{actionButtonText}}
           </button>
           <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
