--- a/www/lib/ionic/scss/custom/general/account/_new.scss
+++ b/www/lib/ionic/scss/custom/general/account/_new.scss
@@ -2,4 +2,12 @@
   input {
     font-size: 16px !important;
   }
+
+  .item {
+    padding: 10px 16px !important;
+  }
+}
+
+.error-on-submit {
+  margin-bottom: 10px;
 }
