--- a/www/templates/general/account/new.html
+++ b/www/templates/general/account/new.html
@@ -4,40 +4,54 @@
   </ion-nav-buttons>
   <ion-content>
     <div class="list account-sign-up-list">
-      <div class="item item-divider">
-        Please fill in
-      </div>
-      <label class="item item-input">
-        <input type="text" ng-model="firstName" placeholder="First name">
-      </label>
-      <label class="item item-input">
-        <input type="text" ng-model="lastName" placeholder="Last name">
-      </label>
-      <label class="item item-input">
-        <input type="email" ng-model="email" placeholder="Email">
-      </label>
-      <label class="item item-input">
-        <input type="password" ng-model="password" placeholder="Password">
-      </label>
-      <div class="item item-divider">
-        Please select
-      </div>
-      <label class="item item-radio">
-        <input type="radio" name="sex" ng-model="sex" value="female">
-        <div class="item-content">
-          Female
+      <form name="signUp">
+        <div class="item item-divider">
+          Please fill in
         </div>
-        <i class="radio-icon ion-checkmark"></i>
-      </label>
-      <label class="item item-radio">
-        <input type="radio" name="sex" ng-model="sex" value="male">
-        <div class="item-content">
-          Male
+        <label class="item item-input">
+          <input type="text" ng-model="firstName" placeholder="First name">
+        </label>
+        <label class="item item-input">
+          <input type="text" ng-model="lastName" placeholder="Last name">
+        </label>
+        <label class="item item-input">
+          <input type="email" ng-model="email" placeholder="Email">
+        </label>
+        <label class="item item-input">
+          <input type="password" ng-model="password" placeholder="Password">
+        </label>
+        <div class="item item-divider">
+          Please select
         </div>
-        <i class="radio-icon ion-checkmark"></i>
-      </label>
+        <label class="item item-radio">
+          <input type="radio" name="sex" ng-model="sex" value="female">
+          <div class="item-content">
+            Female
+          </div>
+          <i class="radio-icon ion-checkmark"></i>
+        </label>
+        <label class="item item-radio">
+          <input type="radio" name="sex" ng-model="sex" value="male">
+          <div class="item-content">
+            Male
+          </div>
+          <i class="radio-icon ion-checkmark"></i>
+        </label>
+      </form>
     </div>
     <div class="bottom-note">
+      <div class="error-on-submit assertive" ng-show="emailTakenError">
+        Email has already been taken
+      </div>
+      <div class="error-on-submit assertive not-valid-email" ng-show="signUp.$error.email" data-error="{{emailErrorCleaner(email, signUp.$error.email)}}">
+        Not a valid email
+      </div>
+      <div class="error-on-submit assertive" ng-show="everthingFilledInError">
+        Please fill everything in
+      </div>
+      <div class="error-on-submit assertive" ng-show="sexSelectedError">
+        Please select the sex you identify as
+      </div>
       <button class="button button-block button-positive" ng-click="createUser(email, firstName, lastName, password, sex)">
         Create Account
       </button>
