--- a/www/templates/notifications/index.html
+++ b/www/templates/notifications/index.html
@@ -14,6 +14,7 @@
           <shift-available ng-model="notification" ng-if="notification.category == 'ShiftAvailable'"></shift-available>
           <swap-cancelled ng-model="notification" ng-if="notification.category == 'SwapCancelled'"></swap-cancelled>
           <someone-elses-swap-accepted ng-model="notification" ng-if="notification.category == 'SomeoneElsesSwapAccepted'"></someone-elses-swap-accepted>
+          <swap-offers-cancelled ng-model="notification" ng-if="notification.category == 'SwapOffersCancelled'"></swap-offers-cancelled>
         </div>
       </div>
       <div ng-if="notifications.length == 0">
