--- a/www/templates/notifications/directives/shift_available.html
+++ b/www/templates/notifications/directives/shift_available.html
@@ -1,6 +1,6 @@
 <a class="item item-icon-left item-icon-right" href="#/tab/swaps/up-for-grabs/offer/{{details.shift_id}}/{{details.day}}/new">
   <i class="icon ion-android-calendar notification-type-icon"></i>
-  <h2>{{details.owner_name}} put up for grabs a {{details.shift_type}} shift on {{details.shift_date_time}} that you are available to take</h2>
+  <h2>{{details.owner_name}} put a {{details.shift_type}} shift up for grabs that you can take</h2>
   <p am-time-ago="notification.created_at | amParse:'YYYY-MM-DDTHH:mm:ss.sssZ'"></p>
   <i class="icon ion-chevron-right icon-accessory"></i>
 </a>
