--- a/www/templates/notifications/directives/someone_elses_swap_accepted.html
+++ b/www/templates/notifications/directives/someone_elses_swap_accepted.html
@@ -1,5 +1,5 @@
 <a class="item item-icon-left">
   <i class="icon ion-heart-broken notification-type-icon"></i>
-  <h2>{{details.owner_name}} accepted someone else's swap offer for the {{details.shift_type}} shift on {{details.shift_date_time}} that you had offered to take</h2>
+  <h2>{{details.owner_name}} accepted someone else's swap offer for the {{details.shift_type}} shift you had offered to take</h2>
   <p am-time-ago="notification.created_at | amParse:'YYYY-MM-DDTHH:mm:ss.sssZ'"></p>
 </a>
