--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -278,6 +278,8 @@ a {
   text-align: center; }
 .notifications-list h2 {
   white-space: normal !important; }
+.notifications-list .item.not-read {
+  background-color: #f6f7f8; }
 
 .comments-page-footer .has-tabs {
   padding: 0px !important; }
