Num unread notifications on tab

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -82,6 +82,9 @@ a {
 .button-energized {
   color: black !important; }
 
+.notification-main-tab .badge {
+  opacity: 1 !important; }
+
 .calendar-holder .row {
   padding: 0px; }
 
