--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -16,7 +16,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Notifications Tab -->
-  <ion-tab title="Notifications" icon-off="ion-ios-bell-outline" icon-on="ion-ios-bell" href="#/tab/notifications/index" badge="num" badge-style="badge-energized">
+  <ion-tab title="Notifications" icon-off="ion-ios-bell-outline" icon-on="ion-ios-bell" href="#/tab/notifications/index" badge="num" badge-style="badge-energized" class="notification-main-tab">
     <ion-nav-view name="tab-notifications"></ion-nav-view>
   </ion-tab>
 
