--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -69,6 +69,9 @@
 
     <div class="bottom-note" ng-show="!loader">
       <div>
+        <div class="error-on-submit assertive" ng-show="shiftsSelectedError">
+          Please select at least one shift to offer
+        </div>
         <button class="button button-positive" ng-click="offerToSwap()">
           Offer to Swap
         </button>
